[package]
name = "rs-rok-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tunnel client for rs-rok"

[[bin]]
name = "rs-rok"
path = "src/main.rs"

[dependencies]
rs-rok-protocol = { path = "../protocol" }
clap = { version = "4", features = ["derive", "cargo"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
native-tls = "0.2"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }

[dev-dependencies]
tempfile = "3"
