[package]
name = "rs-rok-mock-service-https"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-signed HTTPS echo server for rs-rok integration tests"

[[bin]]
name = "mock-service-https"
path = "src/main.rs"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rcgen = "0.13"
rustls = "0.23"
rustls-pki-types = "1"
