[package]
name = "rs-rok-mock-service-tcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TCP echo server for rs-rok TCP tunnel integration tests"

[[bin]]
name = "mock-service-tcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
